Fixed reconnecting problems, player can resume game and roles on reconnect: - received status update processes board state correctly - prevent duplicate tile id's in tiles.stock[] and tiles.board[] - prevent errors for non-initialized tiles - tiles.stock[] updates correctly for every player - disconnected player will only be kicked from the room when disconnecting in the lobby - disconnected player will remain a player during the game - reconnected player keeps his previous roles if using the same username - disconnected players and spectators are visibly shown

--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -195,6 +195,10 @@ label {
     .current {
         font-weight: bold;
     }
+
+    &.disconnected {
+        opacity: 0.3;
+    }
 }
 
 .modal {
